--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -6,7 +6,7 @@
       <text style="text-size:1rem">
         2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
       </text>
-      <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="toIntroPage">进入游戏</button>
+      <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="switchTab" data-tab-index="1">进入游戏</button>
       <button class="index-button cu-btn round bg-yellow margin-lg">进入饥饿餐厅</button>
       <!-- <button class="index-button cu-btn round bg-yellow margin-lg">捐一餐</button> -->
     </view>
@@ -50,6 +50,10 @@
         <text class="cuIcon-info navbar-icon"></text>
         <text class="cuIcon-info navbar-icon"></text>
       </view>
+      <view>
+	<canvas style="width:100vw;height:80vh;" canvas-id="game"></canvas>
+	<button bindtap="gameControl">{{gameStatus}}</button>
+</view>
       <view class="padding" style="text-align:center">
         <button class="index-button cu-btn round bg-yellow margin-lg" bindtap="toGamePage">定点收割</button>
       </view>
