--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -7,8 +7,6 @@
         2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
       </text>
 			<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="switchTab" data-tab-index="1">进入游戏</button>
-			<button class="index-button cu-btn round bg-yellow margin-lg">进入饥饿餐厅</button>
-			<!-- <button class="index-button cu-btn round bg-yellow margin-lg">捐一餐</button> -->
 		</view>
 	</view>
 </block>
@@ -26,23 +24,23 @@
 
 			</view>
 
-			<view style="margin-top:0">
+			<view class="width-80 horizontal-center" style="margin-top:0;">
 				<text style="text-size:1rem; color:white">
           剩余时间：
         </text>
-				<view class="cu-progress round sm striped" style="width:80vw;">
-					<view class="bg-blue" style="width:60vw;">80%</view>
+				<view class="cu-progress round sm striped">
+					<view class="bg-blue" style="width:{{remainPercentage}}%;">{{remainPercentage}}%</view>
 				</view>
 			</view>
-			<view>
+			<view class="width-80 horizontal-center">
 				<text style="text-size:1rem; color:white">
           剩余能量：
         </text>
 				<view class="cu-progress round sm striped">
-					<view class="bg-green" style="width:60vw;">60%</view>
+					<view class="bg-green" style="width:{{remainPercentage}}%;">{{remainPercentage}}%</view>
 				</view>
 			</view>
-			<view>
+			<view class="width-80 horizontal-center">
 				<text style="text-size:1rem;color:white">
           剩余铲子：
         </text>
@@ -54,7 +52,7 @@
 				<text class="cuIcon-info navbar-icon" style="color:white"></text>
 			</view>
 
-			<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
+			<canvas class="width-80 horizontal-center" style="height:40vh;" canvas-id="game"></canvas>
 			<view class="padding" style="text-align:center">
 				<button class="index-button cu-btn round bg-yellow margin-lg" bindtap="gameControl" >{{gameStatus}}</button>
 </view>
@@ -87,20 +85,20 @@
 	<view>Page 4</view>
 </block>
 <view class="navbar">
-	<view class="navbar-tab" bindtap="switchTab" data-tab-index="0">
-		<text class="cuIcon-home navbar-icon" style="color:orange;"></text>
-		<view style="color:orange">主页</view>
+	<view class="navbar-tab {{selectedTab == 1 ? 'dark' : 'light'}}" bindtap="switchTab" data-tab-index="0">
+		<text class="cuIcon-home navbar-icon"></text>
+		<view class="navbar-text">主页</view>
 	</view>
-	<view class="navbar-tab" bindtap="switchTab" data-tab-index="1">
-		<text class="cuIcon-cardboard navbar-icon" style="color:orange"></text>
-		<view style="color:orange">游戏</view>
+	<view class="navbar-tab {{selectedTab == 1 ? 'dark' : 'light'}}" bindtap="switchTab" data-tab-index="1">
+		<text class="cuIcon-cardboard navbar-icon"></text>
+		<view class="navbar-text">游戏</view>
 	</view>
-	<view class="navbar-tab" bindtap="jumpTo" data-tab-index="2">
-		<text class="cuIcon-present navbar-icon" style="color:orange"></text>
-		<view style="color:orange">捐一餐</view>
+	<view class="navbar-tab {{selectedTab == 1 ? 'dark' : 'light'}}" bindtap="jumpTo" data-tab-index="2">
+		<text class="cuIcon-present navbar-icon"></text>
+		<view class="navbar-text">捐一餐</view>
 	</view>
-	<view class="navbar-tab" bindtap="switchTab" data-tab-index="3">
-		<text class="cuIcon-rank navbar-icon" style="color:orange"></text>
-		<view style="color:orange">排名</view>
+	<view class="navbar-tab {{selectedTab == 1 ? 'dark' : 'light'}}" bindtap="switchTab" data-tab-index="3">
+		<text class="cuIcon-rank navbar-icon"></text>
+		<view class="navbar-text">排名</view>
 	</view>
 </view>
