--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -20,6 +20,14 @@
   font-size: 2rem;
 }
 
+.light {
+  color: orange;
+}
+
+.dark {
+  color: white;
+}
+
 .button-vertical {
   border: none;
   border-color: transparent;
@@ -43,4 +51,13 @@
   bottom: 0%;
   position: fixed;
   right: 0%
+}
+
+.width-80 {
+  width: 80vw;
+}
+
+.horizontal-center {
+  margin-left:auto;
+  margin-right:auto;
 }
