remove local resources (assets are better to be loaded from remote)

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,7 +2,7 @@
 	<view style="width:100vw;">
 		<view style="width:80vw;text-align:center;margin-left:auto;margin-right:auto;margin-top:3rem;">
 			<!-- <text class="cuIcon-info" style="font-size:10rem;"></text> -->
-			<image src="../../assets/img/logo.png" style="width:10rem; height:10rem"></image>
+			<image src="https://tx-static-2.kevincdn.cn/images/logo.png" style="width:10rem; height:10rem"></image>
 			<text style="text-size:1rem">
         2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
       </text>
@@ -11,7 +11,7 @@
 	</view>
 </block>
 <block wx:if="{{selectedTab == 1}}">
-<view style="width:100vw; height:100vh; background-image: url('https://image.freepik.com/free-vector/brown-soil-texture-background_1308-20483.jpg')">
+<view style="width:100vw;height:100vh;background-image:url('https://tx-static-2.kevincdn.cn/images/game-backgournd.png')">
 <!-- <view> -->
 				
 			<!-- </view> -->
