--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -62,3 +62,49 @@
   margin-left:auto;
   margin-right:auto;
 }
+.animation-shake {
+  animation-name: shake;
+}
+@keyframes shake {
+
+  0%,
+  100% {
+      transform: translateX(0)
+  }
+
+  10% {
+      transform: translateX(-9px)
+  }
+
+  20% {
+      transform: translateX(8px)
+  }
+
+  30% {
+      transform: translateX(-7px)
+  }
+
+  40% {
+      transform: translateX(6px)
+  }
+
+  50% {
+      transform: translateX(-5px)
+  }
+
+  60% {
+      transform: translateX(4px)
+  }
+
+  70% {
+      transform: translateX(-3px)
+  }
+
+  80% {
+      transform: translateX(2px)
+  }
+
+  90% {
+      transform: translateX(-1px)
+  }
+}
