--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -2,7 +2,7 @@
 	<view style="width:100vw; height:100vh; background-color:#fdfef2">
 		<view style="width:80vw;text-align:center;margin-left:auto;margin-right:auto; padding-top:8vh">
 			<!-- <text class="cuIcon-info" style="font-size:10rem;"></text> -->
-			<image src="https://hunger24.cfpa.org.cn/images/logo.png" style="width:10rem; height:10rem"></image>
+			<image src="https://tx-static-2.kevincdn.cn/images/logo.png" style="width:10rem; height:10rem"></image>
 			<text style="text-size:1rem">
 				2020年10月16日是联合国确定的第40个世界粮食日，中国扶贫基金会联合多家平台、媒体、单位共同发起“饥饿24小时公益体验活动”（简称：饥饿24），倡导18-60周岁有条件的人在10月16日8：00-17日24：00期间，挑战24小时不吃饭。体验饥饿，珍惜粮食，并捐出一天餐费帮助我国儿童改善营养，帮助发展中国家抗击饥饿。
 			</text>
@@ -25,7 +25,6 @@
 				<text class="cuIcon-back navbar-icon" style="color:white" bindtap="switchTab" data-tab-index="0"></text>
 				<text class="cuIcon-info navbar-icon" style="color:white" bindtap="showRuleModal"></text>
 				<text class="cuIcon-info navbar-icon" style="color:white" bindtap="shareGame"></text>
-
 			</view>
 
 			<view class="width-90-inline horizontal-center" style="margin-top:0">
@@ -49,16 +48,15 @@
 					剩余铲子：
 				</text>
 				<view style="margin-top:20rpx">
-					<image wx:for="{{gameSetting.shovel}}" src="https://hunger24.cfpa.org.cn/images/shovel.png"
-						style="width:3rem; height:3rem"></image>
+					<image wx:for="{{gameSetting.shovel}}" src="https://tx-static-2.kevincdn.cn/images/铲子.png" style="width:3rem; height:3rem"></image>
 				</view>
 			</view>
 		</view>
 		<canvas style="width:100vw;height:50vh;" canvas-id="game"></canvas>
-		<view class="padding" style="text-align:center">
-			<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
-				bindtap="gameControl">{{gameStatus}}</button>
-		</view>
+			<view class="padding" style="text-align:center">
+				<button class="index-button cu-btn round bg-yellow margin-sm" style="margin-top:2px"
+					bindtap="gameControl">{{gameStatus}}</button>
+			</view>
 	</view>
 	<view class="cu-modal {{isRuleModalDisplayed?'show':''}}">
 		<view class="cu-dialog">
@@ -80,42 +78,40 @@
 		</view>
 	</view>
 	<view class="cu-modal {{isShareModalDisplayed?'show':''}}">
-		<view class="cu-dialog">
-			<view class="cu-bar bg-white justify-end">
-				<view class="content"></view>
-				<view class="action" bindtap="hideShareModal">
-					<text class="cuIcon-close text-red"></text>
-				</view>
-			</view>
-			<view class="padding-xl">
-				<text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropCollected}}能量值+ {{cropValDict[cropCollected]}}~\n
-					{{cropIntroDict[crop]}}
-				</text>
-				<text wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
-				</text>
-				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share"
-					data-tab-index="1">邀请好友获取铲子</button>
-			</view>
-		</view>
-	</view>
-	<view class="cu-modal {{isResultModalDisplayed?'show':''}}">
-		<view class="cu-dialog">
-			<view class="cu-bar bg-white justify-end">
-				<view class="content"></view>
-				<view class="action">
-					<text class="cuIcon-close text-red"></text>
-				</view>
-			</view>
-			<view class="padding-xl">
-				<text wx:if="{{finalSuccess}}">恭喜你！在24小时过去之后还有剩余能量，完成了饥饿24的挑战，将小程序分享给好友向他们发出挑战吧！
-				</text>
-				<text wx:if="{{!finalSuccess}}">哎呀！很遗憾，你的能量为0，没有完成饥饿24挑战，对好友发起挑战吧~
-				</text>
-				<button class="index-button cu-btn round bg-yellow margin-lg" open-type="share"
-					data-tab-index="1">分享给好友</button>
-			</view>
-		</view>
-	</view>
+  <view class="cu-dialog">
+   <view class="cu-bar bg-white justify-end">
+    <view class="content"></view>
+    <view class="action" bindtap="hideShareModal">
+     <text class="cuIcon-close text-red"></text>
+    </view>
+   </view>
+   <view class="padding-xl">
+    <text wx:if="{{collectSuccess}}">恭喜你！收获一个{{cropsData[cropCollected]['name']}}能量值+{{cropsData[cropCollected]['val']}}~\n
+    {{cropIntroDict[crop]}}
+   </text>
+   <text wx:if="{{!collectSuccess}}">哎呀！很遗憾，你没有收割成功，继续努力吧~
+   </text>
+   <button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">邀请好友获取铲子</button>
+   </view>
+  </view>
+ </view>
+ <view class="cu-modal {{isResultModalDisplayed?'show':''}}">
+  <view class="cu-dialog">
+   <view class="cu-bar bg-white justify-end">
+    <view class="content"></view>
+    <view class="action">
+     <text class="cuIcon-close text-red"></text>
+    </view>
+   </view>
+   <view class="padding-xl">
+    <text wx:if="{{finalSuccess}}">恭喜你！在24小时过去之后还有剩余能量，完成了饥饿24的挑战，将小程序分享给好友向他们发出挑战吧！
+   </text>
+   <text wx:if="{{!finalSuccess}}">哎呀！很遗憾，你的能量为0，没有完成饥饿24挑战，对好友发起挑战吧~
+   </text>
+   <button class="index-button cu-btn round bg-yellow margin-lg" open-type="share" data-tab-index="1">分享给好友</button>
+   </view>
+  </view>
+ </view>
 </block>
 <block wx:if="{{selectedTab == 2}}">
 	<view class="container">
@@ -135,7 +131,7 @@
 		<text class="cuIcon-cardboard navbar-icon" style="color:orange"></text>
 		<view style="color:orange">游戏</view>
 	</view>
-	<view class="navbar-tab" bindtap="toDonate" data-tab-index="2">
+	<view class="navbar-tab" bindtap="jumpTo" data-tab-index="2">
 		<text class="cuIcon-present navbar-icon" style="color:orange"></text>
 		<view style="color:orange">捐一餐</view>
 	</view>
